# pygccx

./: .gitignore  CHANGES.txt  MANIFEST.in  bla.txt  pyproject.toml  readme.md  requirements.txt  setup.py  unsupported_keywords.md
Pygccx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
doc/pygccx/: auxiliary.html  enums.html  index.html  model.html  protocols.html  test_helper_features.html  test_mesh.html  test_model_keywords.html  test_step_keywords.html
docs/pygccx/: enums.html  exceptions.html  index.html  model.html  protocols.html
examples/beam/: beam.py
examples/beam_amp_disp/: beam_amp_disp.py
examples/beam_and_gap.py/: beam_and_gap.py
examples/beam_and_spring/: beam_and_spring.py
examples/beam_buckling/: beam_buckling.py
examples/beam_buckling_perturbation/: beam_buckling_perturbation.py
examples/beam_creep/: beam_creep.py
examples/beam_cs_and_transform/: beam_cs_and_transform.py
examples/beam_cs_and_transform.py/: beam_cs_and_transform.py
examples/beam_gravity/: beam_gravity.py
examples/beam_hyperelastic/: beam_hyperelastic.py
examples/beam_modal/: beam_modal.py
examples/beam_modal_preturbation/: beam_modal_preturbation.py
examples/beam_plastic/: beam_plastic.py
examples/beam_plastic.py/: beam_plastic.py
examples/beamdy8/: beamdy8.py
examples/bolted_flange/: bolted_flange.py  bolted_flange_post.py  model.step
pygccx/: __init__.py  auxiliary.py  enums.py  exceptions.py  model.py  protocols.py  test_helper_features.py  test_mesh.py  test_model_features.py  test_model_keywords.py  test_step_features.py  test_step_keywords.py
tests/: test_all.py  test_bolts.py  test_helper_features.py  test_mesh.py  test_model_keywords.py  test_result_reader.py  test_step_keywords.py  test_stress_tools.py
(+429 files in other folders)
