[project]
name = "pygccx"
description='A python framework for CalculiX'
authors = [
    {name = "Matthias Sedlmaier", email = "winterheart@gmx.de"},
]
version = "0.2.2"
dependencies = [
    "numpy >= 1.22.4",
    "scipy >= 1.9.0",
    "gmsh >= 4.10.3",
]

requires-python = ">=3.10"
readme = "readme.md"
license = {file = "LICENSE"}

[tool.setuptools]
include-package-data = true
packages = ['pygccx',
            'pygccx.test', 
            'pygccx.helper_features', 'pygccx.helper_features.test',
            'pygccx.mesh', 'pygccx.mesh.test', 'pygccx.mesh.mesh_factory',
            'pygccx.model_keywords', 'pygccx.model_keywords.test',
            'pygccx.result_reader', 'pygccx.result_reader.test',
            'pygccx.step_keywords', 'pygccx.step_keywords.test',
            'pygccx.tools', 'pygccx.tools.stress_tools', 
            'pygccx.tools.stress_tools.test',
            'pygccx.tools.bolts', 'pygccx.tools.bolts.test',]
