[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pygccx"
description = 'A python framework for CalculiX'
authors = [{ name = "Matthias Sedlmaier", email = "winterheart@gmx.de" }]
version = "0.3.0"
dependencies = ["numpy >= 1.22.4", "scipy >= 1.9.0", "gmsh >= 4.10.3"]

requires-python = ">=3.10"
readme = "readme.md"
license = { file = "LICENSE" }

[tool.setuptools]
include-package-data = true
packages = [
    'pygccx',
    'pygccx.helper_features',
    'pygccx.mesh',
    'pygccx.mesh.mesh_factory',
    'pygccx.model_keywords',
    'pygccx.result_reader',
    'pygccx.step_keywords',
    'pygccx.tools',
    'pygccx.tools.stress_tools',
    'pygccx.tools.bolts',
]
